WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288363
REGRESSION(
290795@main
): Tentative build fix for Debian Stable bot
https://bugs.webkit.org/show_bug.cgi?id=288363
Summary
REGRESSION(290795@main): Tentative build fix for Debian Stable bot
Claudio Saavedra
Reported
2025-02-24 03:47:16 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2025-02-24 03:51:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41193
EWS
Comment 2
2025-02-24 05:05:44 PST
Committed
290945@main
(137f6dfc4761): <
https://commits.webkit.org/290945@main
> Reviewed commits have been landed. Closing PR #41193 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-24 05:06:15 PST
<
rdar://problem/145465725
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug