REGRESSION(290795@main): Tentative build fix for Debian Stable bot https://bugs.webkit.org/show_bug.cgi?id=288363

Unreviewed build fix.

normalizedAverage() is not constexpr and this breaks build with
an older GCC compiler.

* Source/WebCore/platform/graphics/PlatformDynamicRangeLimit.h:
(WebCore::PlatformDynamicRangeLimit::PlatformDynamicRangeLimit):

Canonical link: https://commits.webkit.org/290945@main